# slapt-get

./: .clang-format  .gitignore  .valgrind-suppressions  COPYING  ChangeLog  FAQ  FAQ.html  INSTALL  Makefile  README  TODO  default.slapt-getrc.aarch64  default.slapt-getrc.arm  default.slapt-getrc.i386  default.slapt-getrc.x86_64  example.slapt-getrc  example.slapt-getrc.i386  example.slapt-getrc.x86_64  meson.build  meson_options.txt  slack-desc  slack-required  slack-suggests  slapt-get.Slackbuild
.github/workflows/: build-and-test.yml
.tx/: config
doc/: libslapt.3  meson.build  slapt-get.8  slapt-get.ru.8  slapt-get.uk.8
po/: LINGUAS  POTFILES  bg.po  ca.po  cs.po  cz.po  da.po  de.po  el.po  en.po  eo.po  es.po  es_AR.po  es_ES.po  fr.po  gl_ES.po  he.po  hi_IN.po  hu.po  id.po  it.po  ja.po  lv_LV.po  meson.build  nl.po  no.po  pl.po  pt.po  pt_BR.po  pt_PT.po  ro.po  ru.po  sk.po  sl.po  slapt-get.pot  sv.po  tr.po  uk.po  vi.po  zh_CN.po
src/: action.c  action.h  common.c  common.h  configuration.c  configuration.h  curl.c  curl.h  gpgme.c  gpgme.h  main.c  main.h  meson.build  mkslapth.sh  package.c  package.h  slaptcurl.c  slaptcurl.h  slaptgpgme.c  slaptgpgme.h  transaction.c  transaction.h
t/: Makefile  clitests.sh  common.h  meson.build  test.c  test_common.c  test_common.h  test_configuration.c  test_configuration.h  test_curl.c  test_curl.h  test_packages.c  test_packages.h  test_transaction.c  test_transaction.h
t/data/: avail_deps  installed_deps  md5_dummy  rc1
